// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationLauncher dropup + right aligned 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="up"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={true}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={true}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
      />,
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={false}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="right"
>
  <DropdownWithContext
    aria-label="Application launcher"
    autoFocus={true}
    className=""
    direction="up"
    dropdownItems={
      Array [
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Action
        </DropdownItem>,
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={true}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Disabled Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={true}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Disabled Action
        </DropdownItem>,
        <Separator
          className=""
        />,
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Separated Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Separated Action
        </DropdownItem>,
      ]
    }
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    onSelect={[Function]}
    position="right"
    toggle={
      <DropdownToggle
        aria-label="Application launcher"
        className=""
        iconComponent={null}
        id=""
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <ThIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </DropdownToggle>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher pf-m-top"
    >
      <DropdownToggle
        aria-label="Application launcher"
        ariaHasPopup={true}
        className=""
        iconComponent={null}
        id="pf-toggle-id-3"
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={null}
      >
        <Toggle
          aria-label="Application launcher"
          ariaHasPopup={true}
          className=""
          id="pf-toggle-id-3"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={false}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={null}
          type={null}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            aria-label="Application launcher"
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-3"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <ThIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                    transform=""
                  />
                </svg>
              </ThIcon>
            </span>
          </button>
        </Toggle>
      </DropdownToggle>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;

exports[`ApplicationLauncher dropup 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="up"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={true}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={true}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
      />,
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={false}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="left"
>
  <DropdownWithContext
    aria-label="Application launcher"
    autoFocus={true}
    className=""
    direction="up"
    dropdownItems={
      Array [
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Action
        </DropdownItem>,
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={true}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Disabled Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={true}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Disabled Action
        </DropdownItem>,
        <Separator
          className=""
        />,
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Separated Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Separated Action
        </DropdownItem>,
      ]
    }
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    onSelect={[Function]}
    position="left"
    toggle={
      <DropdownToggle
        aria-label="Application launcher"
        className=""
        iconComponent={null}
        id=""
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <ThIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </DropdownToggle>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher pf-m-top"
    >
      <DropdownToggle
        aria-label="Application launcher"
        ariaHasPopup={true}
        className=""
        iconComponent={null}
        id="pf-toggle-id-2"
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={null}
      >
        <Toggle
          aria-label="Application launcher"
          ariaHasPopup={true}
          className=""
          id="pf-toggle-id-2"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={false}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={null}
          type={null}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            aria-label="Application launcher"
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-2"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <ThIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                    transform=""
                  />
                </svg>
              </ThIcon>
            </span>
          </button>
        </Toggle>
      </DropdownToggle>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;

exports[`ApplicationLauncher expanded 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={true}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={true}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
      />,
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={true}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="left"
>
  <DropdownWithContext
    aria-label="Application launcher"
    autoFocus={true}
    className=""
    direction="down"
    dropdownItems={
      Array [
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Action
        </DropdownItem>,
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={true}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Disabled Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={true}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Disabled Action
        </DropdownItem>,
        <Separator
          className=""
        />,
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Separated Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Separated Action
        </DropdownItem>,
      ]
    }
    isGrouped={false}
    isOpen={true}
    isPlain={false}
    onSelect={[Function]}
    position="left"
    toggle={
      <DropdownToggle
        aria-label="Application launcher"
        className=""
        iconComponent={null}
        id=""
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={true}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <ThIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </DropdownToggle>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher pf-m-expanded"
    >
      <DropdownToggle
        aria-label="Application launcher"
        ariaHasPopup={true}
        className=""
        iconComponent={null}
        id="pf-toggle-id-4"
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={true}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={null}
      >
        <Toggle
          aria-label="Application launcher"
          ariaHasPopup={true}
          className=""
          id="pf-toggle-id-4"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={true}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={null}
          type={null}
        >
          <button
            aria-expanded={true}
            aria-haspopup={true}
            aria-label="Application launcher"
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-4"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <ThIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                    transform=""
                  />
                </svg>
              </ThIcon>
            </span>
          </button>
        </Toggle>
      </DropdownToggle>
      <DropdownMenu
        aria-labelledby="pf-toggle-id-4"
        autoFocus={true}
        className=""
        component="ul"
        isGrouped={false}
        isOpen={true}
        openedOnEnter={false}
        position="left"
      >
        <ul
          aria-labelledby="pf-toggle-id-4"
          autoFocus={true}
          className="pf-c-app-launcher__menu"
          hidden={false}
          role="menu"
        >
          <DropdownItem
            className=""
            component="a"
            href=""
            index={0}
            isDisabled={false}
            isHovered={false}
            key=".$link"
            tooltip={null}
            tooltipProps={Object {}}
          >
            <DropdownItem
              className=""
              component="a"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={0}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <a
                  aria-disabled={false}
                  className="pf-c-app-launcher__menu-item"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Link
                </a>
              </li>
            </DropdownItem>
          </DropdownItem>
          <DropdownItem
            className=""
            component="button"
            href=""
            index={1}
            isDisabled={false}
            isHovered={false}
            key=".$action"
            tooltip={null}
            tooltipProps={Object {}}
          >
            <DropdownItem
              className=""
              component="button"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={1}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <button
                  className="pf-c-app-launcher__menu-item"
                  disabled={false}
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                  type="button"
                >
                  Action
                </button>
              </li>
            </DropdownItem>
          </DropdownItem>
          <DropdownItem
            className=""
            component="a"
            href=""
            index={2}
            isDisabled={true}
            isHovered={false}
            key=".$disabled link"
            tooltip={null}
            tooltipProps={Object {}}
          >
            <DropdownItem
              className=""
              component="a"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={2}
              isDisabled={true}
              isHovered={false}
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <a
                  aria-disabled={true}
                  className="pf-m-disabled pf-c-app-launcher__menu-item"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Disabled Link
                </a>
              </li>
            </DropdownItem>
          </DropdownItem>
          <DropdownItem
            className=""
            component="button"
            href=""
            index={3}
            isDisabled={true}
            isHovered={false}
            key=".$disabled action"
            tooltip={null}
            tooltipProps={Object {}}
          >
            <DropdownItem
              className=""
              component="button"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={3}
              isDisabled={true}
              isHovered={false}
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <button
                  className="pf-m-disabled pf-c-app-launcher__menu-item"
                  disabled={true}
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                  type="button"
                >
                  Disabled Action
                </button>
              </li>
            </DropdownItem>
          </DropdownItem>
          <Separator
            className=""
            index={4}
            key=".$separator"
          >
            <DropdownItem
              className="pf-c-app-launcher__separator"
              component="div"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={4}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              role="separator"
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <div
                  className="pf-c-app-launcher__separator"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="separator"
                />
              </li>
            </DropdownItem>
          </Separator>
          <DropdownItem
            className=""
            component="a"
            href=""
            index={5}
            isDisabled={false}
            isHovered={false}
            key=".$separated link"
            tooltip={null}
            tooltipProps={Object {}}
          >
            <DropdownItem
              className=""
              component="a"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={5}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <a
                  aria-disabled={false}
                  className="pf-c-app-launcher__menu-item"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Separated Link
                </a>
              </li>
            </DropdownItem>
          </DropdownItem>
          <DropdownItem
            className=""
            component="button"
            href=""
            index={6}
            isDisabled={false}
            isHovered={false}
            key=".$separated action"
            tooltip={null}
            tooltipProps={Object {}}
          >
            <DropdownItem
              className=""
              component="button"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={6}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <button
                  className="pf-c-app-launcher__menu-item"
                  disabled={false}
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                  type="button"
                >
                  Separated Action
                </button>
              </li>
            </DropdownItem>
          </DropdownItem>
        </ul>
      </DropdownMenu>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;

exports[`ApplicationLauncher regular 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={true}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={true}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
      />,
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={false}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="left"
>
  <DropdownWithContext
    aria-label="Application launcher"
    autoFocus={true}
    className=""
    direction="down"
    dropdownItems={
      Array [
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Action
        </DropdownItem>,
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={true}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Disabled Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={true}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Disabled Action
        </DropdownItem>,
        <Separator
          className=""
        />,
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Separated Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Separated Action
        </DropdownItem>,
      ]
    }
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    onSelect={[Function]}
    position="left"
    toggle={
      <DropdownToggle
        aria-label="Application launcher"
        className=""
        iconComponent={null}
        id=""
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <ThIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </DropdownToggle>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher"
    >
      <DropdownToggle
        aria-label="Application launcher"
        ariaHasPopup={true}
        className=""
        iconComponent={null}
        id="pf-toggle-id-0"
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={null}
      >
        <Toggle
          aria-label="Application launcher"
          ariaHasPopup={true}
          className=""
          id="pf-toggle-id-0"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={false}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={null}
          type={null}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            aria-label="Application launcher"
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <ThIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                    transform=""
                  />
                </svg>
              </ThIcon>
            </span>
          </button>
        </Toggle>
      </DropdownToggle>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;

exports[`ApplicationLauncher right aligned 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="down"
  dropdownItems={
    Array [
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Action
      </DropdownItem>,
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={true}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Disabled Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={true}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Disabled Action
      </DropdownItem>,
      <Separator
        className=""
      />,
      <DropdownItem
        className=""
        component="a"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Separated Link
      </DropdownItem>,
      <DropdownItem
        className=""
        component="button"
        href=""
        isDisabled={false}
        isHovered={false}
        tooltip={null}
        tooltipProps={Object {}}
      >
        Separated Action
      </DropdownItem>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={false}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="right"
>
  <DropdownWithContext
    aria-label="Application launcher"
    autoFocus={true}
    className=""
    direction="down"
    dropdownItems={
      Array [
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Action
        </DropdownItem>,
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={true}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Disabled Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={true}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Disabled Action
        </DropdownItem>,
        <Separator
          className=""
        />,
        <DropdownItem
          className=""
          component="a"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Separated Link
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          tooltip={null}
          tooltipProps={Object {}}
        >
          Separated Action
        </DropdownItem>,
      ]
    }
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    onSelect={[Function]}
    position="right"
    toggle={
      <DropdownToggle
        aria-label="Application launcher"
        className=""
        iconComponent={null}
        id=""
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      >
        <ThIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </DropdownToggle>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher"
    >
      <DropdownToggle
        aria-label="Application launcher"
        ariaHasPopup={true}
        className=""
        iconComponent={null}
        id="pf-toggle-id-1"
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={null}
      >
        <Toggle
          aria-label="Application launcher"
          ariaHasPopup={true}
          className=""
          id="pf-toggle-id-1"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={false}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={null}
          type={null}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            aria-label="Application launcher"
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <ThIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                    transform=""
                  />
                </svg>
              </ThIcon>
            </span>
          </button>
        </Toggle>
      </DropdownToggle>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;
